--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node dist/server.js",
+    "start": "node src/server.js",
     "build": "echo 'Backend build complete'",
     "test": "echo 'No tests specified'",
     "create-admin": "node scripts/create-admin.js"
