--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: social-awareness-frontend
     env: static
-    buildCommand: npm install && npm run build
+    buildCommand: npm run build:render
     staticPublishPath: ./dist
     envVars:
       - key: VITE_API_URL
