--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "@vitejs/plugin-react": "^4.1.1",
     "tailwindcss": "^3.3.6",
     "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16"
+    "autoprefixer": "^10.4.16",
+    "terser": "^5.24.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
