--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:check": "tsc && vite build",
     "build:render": "npm install && vite build",
+    "start": "vite preview --port $PORT --host",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "type-check": "tsc --noEmit"
