--- a/render.yaml
+++ b/render.yaml
@@ -12,18 +12,18 @@ services:
       - key: PORT
         value: 10000
       - key: MONGO_URI
-        sync: false
+        value: mongodb+srv://vqJxgeprG00bRy15:vqJxgeprG00bRy15@cluster0.nyqvk1c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       - key: JWT_SECRET
-        sync: false
+        value: your_super_secret_jwt_key_here_make_it_long_and_random_12345
       - key: FRONTEND_URL
-        value: https://social-awareness-frontend.onrender.com
+        value: https://social-awareness-app-sl4r.onrender.com
 
-  # Frontend Service
+  # Frontend Service (Update existing)
   - type: web
     name: social-awareness-frontend
     env: static
-    buildCommand: cd frontend && npm install && npm run build
+    buildCommand: cd frontend && npm run build:render
     staticPublishPath: ./frontend/dist
     envVars:
       - key: VITE_API_URL
-        value: https://social-awareness-backend.onrender.com
+        value: https://social-awareness-backend.onrender.com/api
