--- a/backend/env.example
+++ b/backend/env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Database
-MONGO_URI=mongodb+srv://vqJxgeprG00bRy15:vqJxgeprG00bRy15@cluster0.nyqvk1c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://hamzasaleem917_db_user:vi9qscgCDUnHPa3E@sawa-cluster.qbjn50w.mongodb.net/?retryWrites=true&w=majority
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here-change-in-production
